trunk/Archive2/de/709dbd725b1c8c/output
=== clang++ ===
main.cpp:1:17: error: using directive refers to implicitly-defined namespace 'std' [-Werror]
using namespace std ;
                ^
1 error generated.
=== g++ ===
*** ok ***
